--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "less-loader": "^6.1.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -32,7 +33,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+        "no-unused-vars": "off",
+        "vue/no-unused-components": "off"
+    }
   },
   "browserslist": [
     "> 1%",
