--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "less-loader": "^6.1.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -34,8 +35,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-        "no-unused-vars": "off",
-        "vue/no-unused-components": "off"
+      "no-unused-vars": "off",
+      "vue/no-unused-components": "off"
     }
   },
   "browserslist": [
